2010-09-14  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        `document.compatMode` is `undefined` when using `application/xhtml+xml`
        https://bugs.webkit.org/show_bug.cgi?id=44422

        Moving the compatMode IDL attribute from HTMLDocument.idl to
        Document.idl fixes this bug and improve compliance with HTML5.

        Test: fast/parser/compatMode-in-xhtml.xhtml

        * dom/Document.cpp:
        (WebCore::Document::compatMode):
        * dom/Document.h:
        * dom/Document.idl:
        * html/HTMLDocument.cpp:
        * html/HTMLDocument.h:
2010-09-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        `document.compatMode` is `undefined` when using `application/xhtml+xml`
        https://bugs.webkit.org/show_bug.cgi?id=44422

        Test the value of compatMode in XHTML.  I'm terrible at XML, but this
        test seems to work.

        * fast/parser/compatMode-in-xhtml-expected.txt: Added.
        * fast/parser/compatMode-in-xhtml.xhtml: Added.


Canonical link: https://commits.webkit.org/58239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67512 268f45cc-cd09-0410-ab3c-d52691b4dbfc