WebCore/html/HTMLDocument.h
@@ -50,7 +50,6 @@ public:
     String designMode() const;
     void setDesignMode(const String&);
 
-    String compatMode() const;
     virtual void setCompatibilityModeFromDoctype();
 
     Element* activeElement();
